fixed width for content on small screen

--- a/src/styles/frontpage.module.scss
+++ b/src/styles/frontpage.module.scss
@@ -16,6 +16,10 @@
     p {
         color: $grey2;
     }
+
+    @media screen and (max-width: 370px) {
+        width: 90%;
+    }
 }
 
 .ourNews {
