--- a/src/styles/login.module.scss
+++ b/src/styles/login.module.scss
@@ -10,6 +10,10 @@
     @media screen and (max-width: 600px) {
         grid-template-columns: 1fr;
     }
+
+    @media screen and (max-width: 370px) {
+        width: 90%;
+    }
 }
 
 .form {
