--- a/src/styles/reservation.module.scss
+++ b/src/styles/reservation.module.scss
@@ -1,4 +1,8 @@
 .reservationMainWrapper{
     width: 80%;
     margin: auto;
+
+    @media screen and (max-width: 370px) {
+        width: 90%;
+    }
 }
